[workspace]
members = [
    "curve25519-dalek",
    "curve25519-dalek-derive",
    "ed25519-dalek",
    "x25519-dalek",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Internal workspace crates (features vary per consumer, so kept minimal here)
curve25519-dalek = { version = "=5.0.0-pre.6", path = "./curve25519-dalek", default-features = false }
curve25519-dalek-derive = { version = "0.1", path = "./curve25519-dalek-derive" }
x25519-dalek = { version = "=3.0.0-pre.6", path = "./x25519-dalek", default-features = false }

# Core dependencies — features are the union across all workspace members
cfg-if = "1"
cpufeatures = "0.3.0"
digest = { version = "0.11.0-rc.12", default-features = false, features = ["block-api"] }
ed25519 = { version = "3.0.0-rc.4", default-features = false }
fiat-crypto = { version = "0.3.0", default-features = false }
ff = { package = "rustcrypto-ff", version = "0.14.0-rc.0", default-features = false }
getrandom = { version = "0.4", default-features = false, features = ["sys_rng"] }
group = { package = "rustcrypto-group", version = "0.14.0-rc.0", default-features = false }
keccak = { version = "0.2.0-rc.1", default-features = false }
rand = { version = "0.10.0", default-features = false, features = ["std", "std_rng", "sys_rng", "thread_rng"] }
rand_core = { version = "0.10.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.11.0-rc.5", default-features = false }
signature = { version = "3.0.0-rc.10", default-features = false }
subtle = { version = "2.6.1", default-features = false, features = ["const-generics"] }
zeroize = { version = "1", default-features = false }

# Proc-macro dependencies
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.115", features = ["full"] }

# Build dependencies
rustc_version = "0.4.1"

# Dev dependencies — features are the union across all workspace members
bincode = { version = "3.0.0", default-features = false, features = ["std", "serde", "derive"] }
blake2 = "0.11.0-rc.5"
chacha20 = { version = "0.10.0", default-features = false, features = ["rng"] }
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4.3"
hex-literal = "1"
proptest = "1"
serde_json = "1.0"
sha3 = "0.11.0-rc.7"
strobe-rs = "0.12"
toml = "1.0"

[profile.dev]
opt-level = 2

[patch.crates-io]
bincode = { git = "https://github.com/earthlings-dev/bincode.git" }
crypto-common = { git = "https://github.com/earthlings-dev/rustcrypto-traits.git" }
curve25519-dalek = { path = "./curve25519-dalek" }
curve25519-dalek-derive = { path = "./curve25519-dalek-derive" }
digest = { git = "https://github.com/earthlings-dev/rustcrypto-traits.git" }
ed25519 = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
getrandom = { git = "https://github.com/earthlings-dev/getrandom.git" }
rand = { git = "https://github.com/earthlings-dev/rand.git" }
rand_core = { git = "https://github.com/earthlings-dev/rand_core.git" }
rustcrypto-ff = { git = "https://github.com/earthlings-dev/rustcrypto-ff.git" }
rustcrypto-group = { git = "https://github.com/earthlings-dev/rustcrypto-group.git" }
serde = { git = "https://github.com/earthlings-dev/serde.git" }
serde_core = { git = "https://github.com/earthlings-dev/serde.git" }
serde_derive = { git = "https://github.com/earthlings-dev/serde.git" }
serde_json = { git = "https://github.com/earthlings-dev/json.git" }
signature = { git = "https://github.com/earthlings-dev/rustcrypto-traits.git" }
tempfile = { git = "https://github.com/earthlings-dev/tempfile.git" }
toml = { git = "https://github.com/takumi-earth/toml.git" }
x25519-dalek = { path = "./x25519-dalek" }
