[package]
name = "curve25519-dalek-derive"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

repository = "https://github.com/dalek-cryptography/curve25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/curve25519-dalek-derive"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "curve25519-dalek Derives"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
