[package]
name = "curve25519-dalek"
# Before incrementing:
# - update CHANGELOG
# - update README if required by semver
version = "5.0.0-pre.6"
edition.workspace = true
rust-version.workspace = true
authors = [
    "Isis Lovecruft <isis@patternsinthevoid.net>",
    "Henry de Valence <hdevalence@hdevalence.ca>",
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek/tree/main/curve25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/curve25519-dalek"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "ristretto", "curve25519", "ristretto255"]
description = "A pure-Rust implementation of group operations on ristretto255 and Curve25519"
exclude = ["**/.gitignore", ".gitignore"]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "docs/assets/rustdoc-include-katex-header.html",
    "--cfg",
    "docsrs",
]
all-features = true

[dev-dependencies]
bincode.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
getrandom = { workspace = true, features = ["sys_rng"] }
hex.workspace = true
proptest.workspace = true
sha2.workspace = true

[build-dependencies]
rustc_version.workspace = true

[[bench]]
name = "dalek_benchmarks"
harness = false
required-features = ["alloc", "rand_core"]

[dependencies]
cfg-if.workspace = true
ff = { workspace = true, optional = true }
group = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
digest = { workspace = true, optional = true, features = ["block-api"] }
subtle = { workspace = true, features = ["const-generics"] }
serde = { workspace = true, optional = true, features = ["derive"] }
zeroize = { workspace = true, optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures.workspace = true

[target.'cfg(curve25519_dalek_backend = "fiat")'.dependencies]
fiat-crypto.workspace = true

[features]
default = ["alloc", "precomputed-tables", "zeroize"]
alloc = ["zeroize?/alloc"]
precomputed-tables = []
legacy_compatibility = []
group = ["dep:group", "rand_core"]
group-bits = ["group", "ff/bits"]
digest = ["dep:digest"]
lizard = ["digest"]

[target.'cfg(all(not(curve25519_dalek_backend = "fiat"), not(curve25519_dalek_backend = "serial"), target_arch = "x86_64"))'.dependencies]
curve25519-dalek-derive.workspace = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(allow_unused_unsafe)',
    'cfg(curve25519_dalek_backend, values("fiat", "serial", "simd", "unstable_avx512"))',
    'cfg(curve25519_dalek_diagnostics, values("build"))',
    'cfg(curve25519_dalek_bits, values("32", "64"))',
    'cfg(nightly)',
]
