[package]
name = "ed25519-dalek"
version = "3.0.0-pre.6"
edition.workspace = true
rust-version.workspace = true
authors = [
    "isis lovecruft <isis@patternsinthevoid.net>",
    "Tony Arcieri <bascule@gmail.com>",
    "Michael Rosenberg <michael@mrosenberg.pub>",
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek/tree/main/ed25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/ed25519-dalek"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
exclude = [".gitignore", "TESTVECTORS", "VALIDATIONVECTORS", "res/*"]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "docs/assets/rustdoc-include-katex-header.html",
    "--cfg",
    "docsrs",
]
all-features = true

[dependencies]
curve25519-dalek = { workspace = true, features = ["digest"] }
ed25519.workspace = true
signature = { workspace = true, optional = true }
sha2.workspace = true
subtle.workspace = true

# optional features
keccak = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
curve25519-dalek = { workspace = true, features = ["digest", "rand_core"] }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
blake2.workspace = true
chacha20 = { workspace = true, features = ["rng"] }
sha3.workspace = true
getrandom = { workspace = true, features = ["sys_rng"] }
hex.workspace = true
bincode.workspace = true
rand.workspace = true
serde_json.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
hex-literal.workspace = true
serde = { workspace = true, features = ["derive"] }
strobe-rs.workspace = true
toml.workspace = true

[[bench]]
name = "ed25519_benchmarks"
harness = false
required-features = ["rand_core"]

[features]
default = ["fast", "zeroize"]
alloc = [
    "curve25519-dalek/alloc",
    "ed25519/alloc",
    "signature/alloc",
    "serde?/alloc",
    "zeroize?/alloc",
]

batch = ["alloc", "dep:keccak", "rand_core"]
fast = ["curve25519-dalek/precomputed-tables"]
digest = ["signature/digest"]
# Exposes the hazmat module
hazmat = []
# Turns off stricter checking for scalar malleability in signatures
legacy_compatibility = ["curve25519-dalek/legacy_compatibility"]
pkcs8 = ["ed25519/pkcs8"]
pem = ["alloc", "ed25519/pem", "pkcs8"]
rand_core = ["dep:rand_core"]
serde = ["dep:serde", "ed25519/serde"]
zeroize = ["dep:zeroize", "curve25519-dalek/zeroize"]
