[package]
name = "x25519-dalek"
edition.workspace = true
rust-version.workspace = true
# Before changing this:
# - update version in README.md
# - update html_root_url
# - update CHANGELOG
# - if any changes were made to README.md, mirror them in src/lib.rs docs
version = "3.0.0-pre.6"
authors = [
    "Isis Lovecruft <isis@patternsinthevoid.net>",
    "DebugSteven <debugsteven@gmail.com>",
    "Henry de Valence <hdevalence@hdevalence.ca>",
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek/tree/main/x25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/x25519-dalek"
categories = ["cryptography", "no-std"]
keywords = [
    "cryptography",
    "curve25519",
    "key-exchange",
    "x25519",
    "diffie-hellman",
]
description = "X25519 elliptic curve Diffie-Hellman key exchange in pure-Rust, using curve25519-dalek."
exclude = [".gitignore", ".travis.yml", "CONTRIBUTING.md"]

[badges]
travis-ci = { repository = "dalek-cryptography/x25519-dalek", branch = "master" }

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "docs/assets/rustdoc-include-katex-header.html",
    "--cfg",
    "docsrs",
]
all-features = true

[dependencies]
curve25519-dalek.workspace = true
rand_core.workspace = true

# optional dependencies
getrandom = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
bincode.workspace = true
criterion.workspace = true
getrandom = { workspace = true, features = ["sys_rng"] }

[[bench]]
name = "x25519"
harness = false

[features]
default = ["precomputed-tables", "zeroize"]
getrandom = ["dep:getrandom"]
zeroize = ["dep:zeroize", "curve25519-dalek/zeroize"]
serde = ["dep:serde", "curve25519-dalek/serde"]
precomputed-tables = ["curve25519-dalek/precomputed-tables"]
reusable_secrets = []
static_secrets = []
